# CyphenEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CyphenBuild.props  README.md
CMake/: CyphenTarget.cmake
CyphenEngine/: .editorconfig  CMakeLists.txt  CoreIo_WriteAllText_RoundTrip.tmp  CoreIo_WriteAllText_UTF8_LF.txt  CyphenEngine.cpp  CyphenEngine.rc  CyphenEngine.sln  CyphenEngine.vcxproj  CyphenEngine.vcxproj.filters  define.h  pch.h  types.h
CyphenEngine/Core/: AnimationMgr.cpp  AnimationMgr.h  Animator.h  AudioMgr.cpp  AudioMgr.h  Core.cpp  Core.h  EventMgr.h  InputMgr.cpp  InputMgr.h  NetworkMgr.cpp  NetworkMgr.h  PathMgr.cpp  PathMgr.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.h  RendererD3DX11.cpp  RendererD3DX11.h  ResourceMgr.cpp  ResourceMgr.h  TimeMgr.h  UIMgr.cpp  UIMgr.h  WindowMgr.h
CyphenEngine/Core/Private/: Core.cpp  Engine.cpp
CyphenEngine/Core/Public/: Core.h  Event.h
CyphenEngine/CyphenEngine/x64/Debug/: CyphenEngine.exe.recipe  CyphenEngine.ilk  vc143.idb
CyphenEngine/CyphenEngine/x64/Debug/CyphenEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CyphenEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
CyphenEngine/DevLog/: 25.02.11.txt  25.02.17.txt  25.03.06.txt  25.04.07.txt  25.06.04.txt  25.06.12.txt  25.07.03.txt  25.07.04.txt  25.07.09.txt  25.07.17.txt  25.07.24.txt  Todos.txt  폴더 기능 정리.txt
CyphenEngine/DevLog/2025/: 25.02.11.txt  25.02.17.txt  25.03.06.txt  25.04.07.txt  25.06.04.txt  25.07.02.txt  25.07.04.txt  25.07.09.txt  25.07.17.txt  25.07.24.txt
CyphenEngine/DevLog/2026/: 26.05.27.txt  26.06.01.txt  26.06.08.txt  26.06.09.txt  26.06.10.txt  26.06.15.txt  26.06.16.txt  26.06.17.txt  26.06.19.txt  26.06.22.txt  26.06.23.txt  26.06.24.txt  26.06.29.txt  26.07.01.txt  26.07.02.txt
CyphenEngine/Launch/Public/: RCa31384  Resource.h
CyphenEngine/Launch/Resource/: CyphenEngine.rc  RCa25412  RCb25412
CyphenEngine/Runtime/Core/Private/: Core.cpp  Input.cpp
CyphenEngine/Runtime/Core/Public/: Core.h  Engine.h  Input.h
CyphenEngine/Source/: pch.h
CyphenEngine/Source/Common/Private/: Logger.cpp
CyphenEngine/Source/Common/Public/: Logger.h  types.h
CyphenEngine/Source/Content/Private/: Codec.cpp
CyphenEngine/Source/Content/Private/Image/: ImageCodec.cpp  ImageCodec.h
CyphenEngine/Source/Content/Private/Image/Jpeg/: JpegCodec.cpp  JpegCodec.h  LinuxJpegCodec.cpp  LinuxJpegCodec.h  WindowsJpegCodec.cpp  WindowsJpegCodec.h
CyphenEngine/Source/Content/Public/: Codec.h
CyphenEngine/Source/Core/Private/: File.cpp  FileStream.cpp  FileSystem.cpp  Logger.cpp  ModuleBinding.cpp  ModuleManager.cpp  Path.cpp  Separator.cpp  TextCodec.cpp  Thread.cpp  Time.cpp
CyphenEngine/Source/Core/Public/: CChar.h  CDateTime.h  CPrimitiveTypes.h  CString.h  CSystemDateTime.h  File.h  FileStream.h  FileSystem.h  FileTypes.h  Logger.h  ModuleBinding.h  ModuleDescriptor.h  ModuleManager.h  Path.h  Separator.h  TextCodec.h  Thread.h  Time.h  TstringUtility.h  types.h
CyphenEngine/Source/Engine/Private/: CyphenEngine.cpp
CyphenEngine/Source/Engine/Public/: CyphenEngine.h  EngineContext.h
CyphenEngine/Source/HAL/Private/: ModuleLoader.h  PlatformFile.h  PlatformPath.h  PlatformTime.h
CyphenEngine/Source/HAL/Public/: Launch.h  NativeWindowInfo.h  Path.h
CyphenEngine/Source/Launch/Private/: CyphenEngine.cpp  Path.cpp
CyphenEngine/Source/Launch/Public/: CyphenEngine.h  Path.h
CyphenEngine/Source/Modules/Private/: ModuleBinder.cpp  ModuleCommandBuffer.cpp  ModuleManager.cpp
CyphenEngine/Source/Modules/Public/: Command.h  CommandBuffer.h  ModuleBinder.h  ModuleCommand.h  ModuleCommandBuffer.h  ModuleDescriptor.h  ModuleExport.h  ModuleManager.h
CyphenEngine/Source/Modules/Renderer/Private/: D3dx11Renderer.cpp  Dx11Renderer.cpp  RenderCommandBuffer.cpp  RenderCommandBuffer.h  Renderer.cpp
CyphenEngine/Source/Modules/Renderer/Public/: D3dx11Renderer.h  Dx11Renderer.h  Frame.h  RenderCommand.h  Renderer.h  RendererModule.h  RendererTypes.h
CyphenEngine/Source/Modules/Resource/Public/: ResourceCommand.h
CyphenEngine/Source/Platform/Independent/Private/: LaunchIndependent.cpp
CyphenEngine/Source/Platform/Independent/Public/: LaunchIndependent.h
CyphenEngine/Source/Platform/Linux/Private/: Launch.cpp  LinuxPath.cpp  LinuxPath.h  LinuxString.cpp  LinuxString.h  ModuleLoader.cpp  PlatformFile.cpp  PlatformPath.cpp  PlatformTime.cpp
CyphenEngine/Source/Platform/Linux/Public/: LaunchLinux.h
CyphenEngine/Source/Platform/Windows/Private/: File.cpp  Launch.cpp  LaunchWindows.cpp  ModuleLoader.cpp  Path.cpp  PlatformFile.cpp  PlatformPath.cpp  PlatformTime.cpp  Time.cpp  WindowsPath.cpp  WindowsPath.h  WindowsString.cpp  WindowsString.h
CyphenEngine/Source/Platform/Windows/Public/: LaunchWindows.h
CyphenEngine/Source/Platform/Windows/Resource/: CyphenEngine.aps  CyphenEngine.rc  Resource.h
CyphenEngine/Source/Resource/: CyphenEngine.aps  CyphenEngine.rc
CyphenEngine/Source/Resource/Private/: Texture.cpp
CyphenEngine/Source/Resource/Public/: Resource.h  Texture.h
CyphenEngine/Source/Runtime/Core/Private/: Core.cpp  Engine.cpp  Input.cpp
CyphenEngine/Source/Runtime/Core/Public/: Core.h  Engine.h  Event.h  Input.h
CyphenEngine/Source/Runtime/Private/: CyphenEngine.cpp  File.cpp  Path.cpp  Time.cpp
CyphenEngine/Source/Runtime/Public/: CyphenEngine.h  File.h  Time.h
CyphenEngine/Source/Test/CoreIO/: CoreIOTests.cpp  CoreIOTests.h
CyphenEngine/Source/Test/Module/: ModuleTest.cpp  ModuleTest.h
CyphenEngine/Source/Utility/Private/: TstringUtility.cpp
CyphenEngine/Source/Utility/Public/: TstringUtility.h
CyphenEngine/pch/Public/: pch.h
Docs/: Architecture.md
Modules/Renderer/CyphenRendererVulkan/: CMakeLists.txt  CyphenRendererVulkan.vcxproj
Modules/Renderer/CyphenRendererVulkan/Source/HAL/Private/: Surface.h
Modules/Renderer/CyphenRendererVulkan/Source/Private/: TexturedQuad.frag  TexturedQuad.vert  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererModule.cpp
(+8 files in other folders)
